icons added. to my project fix color scheme and fill out some white space.

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -10,7 +10,7 @@ h1,h4{
 
 p{
   font-size: 160%;
-  color: white;
+  color: black;
 }
 
 .info{
